added field for selecting the delivery header name

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -54,6 +54,8 @@
 
                     // cart handler url
                     url: '',
+
+                    delivery: 'title', // group
                 },
 
                 delivery: {
@@ -416,7 +418,7 @@
                                             .prop('selected', selected && selected === type)
                                             .data('uuid', item.uuid)
                                             .val(type)
-                                            .text(properties.title)
+                                            .text(options.cart.delivery === 'title' ? properties.title : type)
                                     );
 
                                     break;
