--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -55,6 +55,7 @@
                     // cart handler url
                     url: '',
 
+                    // delivery options view
                     delivery: 'title', // group
                 },
 
