--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -371,6 +371,14 @@
                                     .val(item.quantity)
                             );
 
+                            // append system line with uuid => price
+                            $items.append(
+                                $('<input ' + options.selectors['cart-data'] + '>')
+                                    .attr('type', 'number')
+                                    .attr('name', 'products[' + item.uuid + '][price]')
+                                    .val(item.price)
+                            );
+
                             // append system line with uuid => price_type
                             $items.append(
                                 $('<input ' + options.selectors['cart-data'] + '>')
@@ -514,7 +522,7 @@
                             'price': 0,
                             'price_wholesale': 0,
                             'price_wholesale_from': 0,
-                            'price_type': 'price', // price, price_wholesale
+                            'price_type': 'price', // price, price_wholesale, price_self
                             'quantity': 1,
                             'quantity_step': 1,
                             'quantity_min': 1,
@@ -529,7 +537,7 @@
                     item['price'] = item['price'] ? +item['price'] : 0;
                     item['price_wholesale'] = item['price_wholesale'] ? +item['price_wholesale'] : 0;
                     item['price_wholesale_from'] = item['price_wholesale_from'] ? +item['price_wholesale_from'] : 0;
-                    item['price_type'] = item['price_wholesale_from'] > 0 && item['quantity'] >= item['price_wholesale_from'] ? 'price_wholesale' : 'price';
+                    item['price_type'] = item['price_type'] === 'price_self' ? 'price_self' : (item['price_wholesale_from'] > 0 && item['quantity'] >= item['price_wholesale_from'] ? 'price_wholesale' : 'price');
 
                     if ((index = this.cartFindItemByField(item['uuid'], 'uuid')) >= 0) {
                         this.cartItemChangeCountById(index, cart[index].quantity + item['quantity']);
